feat: add routine task generation api
